[package]
name = "paperdoll"
version = "0.0.1-alpha.5"
authors = ["Fralonra <zoronlivingston@gmail.com>"]
description = "2D paper doll model"
edition = "2021"
homepage = "https://github.com/fralonra/paperdoll"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fralonra/paperdoll"
keywords = ["paperdoll"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
